# fitdb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
fit_sdk/: CMakeLists.txt
scripts/: build.sh
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
